# dump

glad/: CMakeLists.txt
glad/res/shaders/: shader.fs  shader.vs
glad/src/: glad.c  main  main.cpp  main_3d_with_camer.cpp
glew/: CMakeLists.txt
glew/res/shaders/: fragmentShader.shader  vertexShader.shader
glew/src/: Error.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h  main.cpp  shader_s.h
raylib_apps/: Makefile  build.sh  main  main.c  snake_c.wasm
